UPDATES ProjectList component and CSS styles; adds static backdrop to delete modal for improved user interaction and enhances issue button focus styling for better visibility.

--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -38,6 +38,12 @@ span {
     transition: background-color .3s;
 }
 
+.issueButton:focus {
+    background-color:#7195b9;
+    color: black
+}
+
+
 .deleteButton {
     background-color: #dd4338;
     border: 1px solid #dadadf;
